[package]
name = "yaml-rust-davvid"
version = "0.6.2"
authors = [
    "Yuheng Chen <yuhengchen@sensetime.com>",
    "David Aguilar <davvid@gmail.com>"
]
homepage = "https://davvid.github.io/yaml-rust"
documentation = "https://docs.rs/yaml-rust-davvid"
license = "MIT/Apache-2.0"
description = "The missing YAML 1.2 parser for rust"
repository = "https://github.com/davvid/yaml-rust"
readme = "README.md"
edition = "2021"
maintenance = { status = "as-is" }

[dependencies]
encoding = "0.2"
hashlink = "0.8"

[dev-dependencies]
quickcheck = "1.0"
